--- a/coderbyte-project/.classpath
+++ b/coderbyte-project/.classpath
@@ -24,5 +24,15 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Users/VictorIachim/.m2/repository/io/cucumber/cucumber-core/7.14.0/cucumber-core-7.14.0.jar" sourcepath="C:/Users/VictorIachim/.m2/repository/io/cucumber/cucumber-core/7.14.0/cucumber-core-7.14.0-sources.jar">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="javadoc_location" value="jar:file:/C:/Users/VictorIachim/.m2/repository/io/cucumber/cucumber-core/7.14.0/cucumber-core-7.14.0-javadoc.jar!/"/>
+			<attribute name="maven.groupId" value="io.cucumber"/>
+			<attribute name="maven.artifactId" value="cucumber-core"/>
+			<attribute name="maven.version" value="7.14.0"/>
+			<attribute name="maven.scope" value="compile"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
